--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.42.1",
     "react-redux": "^8.0.4",
     "sass": "^1.55.0"
   },
