--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@commitlint/config-conventional": "^17.4.2",
     "@reduxjs/toolkit": "^1.8.6",
     "firebase": "^9.12.1",
     "firebase-admin": "^11.1.0",
@@ -27,6 +28,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
+    "husky": "^8.0.3",
     "typescript": "4.8.4"
   }
 }
