--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.8.6",
     "firebase": "^9.12.1",
     "firebase-admin": "^11.1.0",
+    "lint-staged": "^13.1.0",
     "next": "12.3.1",
     "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
